# mindforge-server-llm

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  cloud-init.tmpl.yaml  deploy-service.sh  digital-ocean-helpful.txt  docker-compose.yml  entrypoint.sh  requirements.txt  server.py
deploy/: Caddyfile  mindforge.service
prompts/: about_template.txt  coding_assistant.txt  creative_writing.txt  default.txt  email_rewrite.txt  nutrition_coach.txt
rust-server/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml
rust-server/src/: main.rs
