[package]
name = "mindforge-llm-server"
version = "0.0.1"
edition = "2021"

[dependencies]
# LLM Dependencies
llama_cpp = "0.3.2"

# Async Runtime & Web Framework
tokio = { version = "1", features = ["full"] }
actix-web = "4"

# Serialization & Data Types
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

# Utilities
dotenv = "0.15"
num_cpus = "1.15"
log = "0.4"
env_logger = "0.10"
anyhow = "1"
rayon = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"